--- a/app/view/index.html
+++ b/app/view/index.html
@@ -7,7 +7,7 @@
 <body>
 <div>
     <div class='center'>
-        <div class='title'>Chupa chups Recognizer</div>
+        <div class='title'>Chupa chups Recognizer (0.0.2)</div>
         <div class='content'>
             <div class='no-display'>
                 <input id='file-input'
@@ -30,6 +30,8 @@
             <div class='result-label'>
                 <label id='result-label'></label>
             </div>
+        </div>
+        <div>You can download sample images from: https://drive.google.com/open?id=1nJ1ugZbJZC-KbL_jy3I9T3_04ByPmNX2
         </div>
     </div>
 </div>
